<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="22dp"
        tools:context=".fragment.ui.SettingFragment">


        <TextView
            android:id="@+id/to_accountTV"
            style="@style/ImageText"
            android:text="@string/account"
            app:drawableStartCompat="@drawable/img_person"
            tools:drawableStart="@drawable/img_person" />

        <View style="@style/Contour" />

        <TextView
            android:id="@+id/to_notificationTV"
            style="@style/ImageText"
            android:text="@string/notification"
            app:drawableStartCompat="@drawable/img_notification"
            tools:drawableStart="@drawable/img_notification" />

        <View style="@style/Contour" />

        <TextView
            android:id="@+id/to_securityTV"
            style="@style/ImageText"
            android:text="@string/security"
            app:drawableStartCompat="@drawable/img_security"
            tools:drawableStart="@drawable/img_security" />

        <View style="@style/Contour" />

        <TextView
            android:id="@+id/to_noticeTV"
            style="@style/ImageText"
            android:text="@string/notice"
            app:drawableStartCompat="@drawable/img_person"
            tools:drawableStart="@drawable/img_person" />

        <View style="@style/Contour" />

        <TextView
            android:id="@+id/to_inquiryTV"
            style="@style/ImageText"
            android:text="@string/inquiry"
            app:drawableStartCompat="@drawable/img_person"
            tools:drawableStart="@drawable/img_person" />

        <View style="@style/Contour" />

    </LinearLayout>

</layout>
